# tinyraycaster

./: .gitpod.yml  CMakeLists.txt  Dockerfile  FindSDL2.cmake  README.md  build.sh  framebuffer.cpp  framebuffer.h  gui.cpp  map.cpp  map.h  player.h  sprite.cpp  sprite.h  textures.cpp  textures.h  tinyraycaster.cpp  tinyraycaster.h  utils.cpp  utils.h
doc/: 007.mkv  008.mkv  012.mkv  column.xoj  cosine-correction.xoj  player_a.xoj  readthis.xoj  sprite.xoj
